# SPECFEMPP

./: .clang-format  .firebaserc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  constants.hpp.in  nsys_demo.nsys-rep  pyproject.toml  test.f90
benchmarks/src/: CMakeLists.txt  README.md  run_parser.py
benchmarks/src/nightly_benchmarks/: cli.py  io_utils.py  kp_parser.py
core/: CMakeLists.txt  specfem.cpp  specfem.hpp
core/point/: partial_derivatives.hpp  stress.hpp
core/point/impl/: point_data.hpp
core/specfem/: CMakeLists.txt  assembly.hpp  assembly_mesh.hpp  chunk_element.hpp  compute.hpp  core.cpp  core.hpp  data_access.hpp  execute.hpp  jacobian.hpp  point.hpp  receiver.hpp  receivers.hpp  shape_functions.hpp  source.hpp
core/specfem/assembly/: CMakeLists.txt  assembly.cpp  assembly.hpp  boundaries.cpp  boundaries.hpp  boundary_values.cpp  boundary_values.hpp  check_jacobian.cpp  compute_source_array.hpp  compute_wavefield.cpp  coupled_interfaces.cpp  coupled_interfaces.hpp  coupled_interfaces.tpp  coupled_interfaces2.hpp  edge_types.hpp  element_types.cpp  element_types.hpp  fields.cpp  fields.hpp  interface_types.hpp  jacobian_matrix.cpp  jacobian_matrix.hpp  kernels.cpp  kernels.hpp  mesh.cpp  mesh.hpp  mesh_base.hpp  properties.cpp  properties.hpp  quadrature.hpp  receivers.cpp  receivers.hpp  sources.cpp  sources.hpp
core/specfem/chunk_edge/: acceleration.hpp  displacement.hpp  index.hpp  velocity.hpp
core/specfem/chunk_element/: acceleration.hpp  displacement.hpp  index.hpp  mapped_index.hpp  stress_integrand.hpp  velocity.hpp
core/specfem/compute/: CMakeLists.txt  assembly.cpp  boundaries.cpp  boundary_values.cpp  boundary_values.hpp  compute_jacobian_matrix.hpp  coupled_interfaces.cpp  coupled_interfaces.hpp  coupled_interfaces.tpp  element_types.cpp  element_types.hpp  fields.cpp  fields.hpp  interface_container.hpp  jacobian_matrix.cpp  jacobian_matrix.hpp  kernels.hpp  mesh.cpp  mesh.hpp  properties.cpp  receivers.cpp  sources.cpp
core/specfem/data_access/: accessor.hpp  check_compatibility.hpp  container.hpp  data_class.hpp
core/specfem/jacobian/: CMakeLists.txt  interface.hpp  jacobian.cpp  jacobian.hpp
core/specfem/point/: CMakeLists.txt  acceleration.hpp  assembly_index.hpp  boundary.hpp  coordinates.cpp  coordinates.hpp  coordinates.tpp  coupled_interface.hpp  displacement.hpp  edge_index.hpp  field.hpp  field_derivatives.hpp  index.hpp  interface_index.hpp  jacobian_matrix.cpp  jacobian_matrix.hpp  jacobian_matrix.tpp  kernels.hpp  mapped_index.hpp  mass_inverse.hpp  partial_derivatives.cpp  partial_derivatives.hpp  partial_derivatives.tpp  properties.hpp  source.hpp  sources.hpp  stress.hpp  stress_integrand.hpp  velocity.hpp
core/specfem/receiver/: interface.hpp  receiver.cpp  receiver.hpp
core/specfem/receivers/: CMakeLists.txt
core/specfem/shape_functions/: CMakeLists.txt  shape_function_derivatives2d.cpp  shape_functions.hpp  shape_functions2d.cpp
core/specfem/source/: CMakeLists.txt  adjoint_source.cpp  adjoint_source.hpp  cosserat_force_source.cpp  external.cpp  external.hpp  force_source.cpp  fwd.hpp  moment_tensor_source.cpp  source.cpp  source.hpp  source.tpp  tensor_source.hpp  vector_source.hpp
examples/: CMakeLists.txt  README.md  pyproject.toml
examples/CUBIT/homogeneous_salt_dome/: plot.py  source.yaml  specfem_config.yaml
examples/CUBIT/simple_mesh/: Par_file  specfem_config.yaml
examples/Tromp_2005/: .gitignore  CMakeLists.txt  Par_File.in  README.md  Snakefile  Snakefile.in  adjoint_source.yaml  forward_source.yaml  plot.py  source.yaml.in  specfem_config.yaml.in
examples/Tromp_2005/templates/: source.yaml  specfem_config.yaml
examples/anisotropic-crystal/: .gitignore
examples/anisotropic-isotropic-model/: CMakeLists.txt  sources.yaml
examples/anisotropic-isotropic-model/REF_SEIS/: AA.S0001.BXX.semd  AA.S0001.BXZ.semd
examples/dim2/CUBIT/: Par_File  README.md  specfem_config.yaml
examples/dim2/fluid-solid-interface/: Par_file  README.md  (+2 more)
examples/electromagnetic_no_damping_GPR_TE/: .gitignore  CMakeLists.txt  README.md  sources.yaml
examples/fluid-solid-bathymetry/: .gitignore  CMakeLists.txt  Par_File  README.md  Snakefile  line_sources.yaml  single_source.yaml  specfem_config.yaml  visualize_seismograms.py
examples/fluid-solid-interface/: Par_File.in  README.md  Snakefile  plot_wavefield_scatter.py  sources.yaml  specfem_config.yaml.in
examples/homogeneous-medium-flat-topography/: CMakeLists.txt  Par_File.in  README.md  Snakefile  source.yaml  specfem_config.yaml.in
examples/homogeneous-spin/: CMakeLists.txt  README.md  STATIONS  plot.py  plot_seis.py  source.yaml
examples/poroelastic-semi-infinite/: CMakeLists.txt  Snakefile
examples/solid-solid-interface/: CMakeLists.txt  README.md  Snakefile  sources.yaml
examples/spin-in-homogeneous-isotropic-medium/: CMakeLists.txt  sources.yaml
fortran/meshfem2d/: .gitignore  CMakeLists.txt  adj_seismogram.f90  adjacency_graph.f90  config.h  constants.h  decompose_mesh.F90  define_shape_functions.f90  determine_acoustic_surface.f90  exit_mpi.F90  meshfem2D.F90  meshfem2D_par.f90  metis_partitioning.F90  parallel.F90  precision.h  read_external_mesh_files.F90  read_material_table.f90  read_mesh_files.F90  read_parameter_file.F90  read_regions.f90  read_source_file.f90  read_value_parameters.f90  repartition_coupling.f90  save_databases.f90  save_databases_adj.f90  save_databases_footer.f90  save_gnuplot_file.f90  save_stations_file.f90  scotch_partitioning.F90  shared_par.f90  version.fh
fortran/meshfem3d/: CMakeLists.txt
tests/regression-tests/: CMakeLists.txt  compare_regression_results.cpp  run.sh
tests/unit-tests/: CMakeLists.txt  Kokkos_Environment.cpp  Kokkos_Environment.hpp  MPI_environment.cpp  MPI_environment.hpp  test_helper.hpp  test_macros.hpp  test_setup.hpp
tests/unittests/: CMakeLists.txt  Kokkos_Environment.cpp  Kokkos_Environment.hpp  Lagrange_tests.cpp  MPI_environment.cpp  MPI_environment.hpp  gll_class_test.cpp  gll_tests.cpp
(+5377 files in other folders)
